force-app/main/default/objects/Retail_Product__c/Retail_Product__c.object-meta.xml
<CustomObject>
    <label>Retail Product</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>