force-app/main/default/objects/Retail_Product__c/fields/AddInventory__c.field-meta.xml
<CustomField>
    <fullName>AddInventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Add Inventory</label>
    <referenceTo>Retail_Inventory__c</referenceTo>
    <relationshipLabel>Retail Products</relationshipLabel>
    <relationshipName>Retail_Products</relationshipName>
    <type>Lookup</type>
</CustomField>