force-app/main/default/objects/Retail_Product__c/fields/Bundle_Number_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Number_Tracker__c</fullName>
    <defaultValue>TEXT(10000000)</defaultValue>
    <label>Bundle Number Tracker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>