force-app/main/default/objects/Retail_Product__c/fields/ConsumablesCorrelations__c.field-meta.xml
<CustomField>
    <fullName>ConsumablesCorrelations__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consumables Correlations</label>
    <referenceTo>Retail_Consumables__c</referenceTo>
    <relationshipLabel>Retail Products</relationshipLabel>
    <relationshipName>Retail_Products</relationshipName>
    <type>Lookup</type>
</CustomField>