force-app/main/default/objects/Retail_Product__c/fields/GSM__c.field-meta.xml
<CustomField>
    <fullName>GSM__c</fullName>
    <label>GSM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>