force-app/main/default/objects/Retail_Product__c/fields/Retail_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Retail_Product_Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product Group</label>
    <referenceTo>Retail_Product_Group__c</referenceTo>
    <relationshipLabel>Retail Products</relationshipLabel>
    <relationshipName>Retail_Products</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>