force-app/main/default/objects/Retail_Product__c/fields/Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Selling_Price__c</fullName>
    <label>Selling Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>