force-app/main/default/objects/Retail_Product__c/fields/Std_Package_Size__c.field-meta.xml
<CustomField>
    <fullName>Std_Package_Size__c</fullName>
    <label>Std Package Size</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>