force-app/main/default/objects/Retail_Product__c/fields/Thickness_Mic__c.field-meta.xml
<CustomField>
    <fullName>Thickness_Mic__c</fullName>
    <label>Thickness(Mic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>