force-app/main/default/objects/Retail_Product__c/fields/Threshold_Value__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Value__c</fullName>
    <label>Threshold Value</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>