force-app/main/default/objects/Retail_Product__c/fields/Total_In_Stock__c.field-meta.xml
<CustomField>
    <fullName>Total_In_Stock__c</fullName>
    <label>Total In Stock</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>