force-app/main/default/objects/Retail_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Code__c</columns>
    <columns>Status__c</columns>
    <columns>Size__c</columns>
    <columns>Weight__c</columns>
    <columns>Colour__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>